implmeneted custom scopes

--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,9 +1,9 @@
-<h1> Portfolio Itesm </h1>
+<h1> Agular Items </h1>
 
 
 <%= link_to "Create New Item", new_portfolio_path %>
 
-<% @portfolio_items.each do |portfolio_item| %>
+<% @angular_items.each do |portfolio_item| %>
 	<p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
 	<p><%= portfolio_item.subtitle %></p>
 	<p><%= portfolio_item.body %></p>
